test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics/stdout.snap
---
source: test/src/snapshot/mod.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics
   Compiling library std (sway-lib-std)
   Compiling script const_generics (test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics)
error
 --> test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics/src/main.sw:7:15
  |
5 | }
6 | 
7 | impl<T, const N: u64> A for [T; N] {
  |               ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
8 |     #[allow(dead_code)]
9 |     fn f(self) -> u64 {
  |
____

  Aborting due to 1 error.
error: Failed to compile const_generics

> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics
   Compiling library std (sway-lib-std)
[sway-core/src/language/ty/expression/expression.rs:587:18] Err(handler.emit_err(sway_error::error::CompileError::ConstGenericNotSupportedHere
{ span: self.span.clone(), },)) = Err(
    ErrorEmitted {
        _priv: (),
    },
)
[sway-core/src/language/ty/expression/expression.rs:587:18] Err(handler.emit_err(sway_error::error::CompileError::ConstGenericNotSupportedHere
{ span: self.span.clone(), },)) = Err(
    ErrorEmitted {
        _priv: (),
    },
)
[sway-core/src/language/ty/expression/expression.rs:587:18] Err(handler.emit_err(sway_error::error::CompileError::ConstGenericNotSupportedHere
{ span: self.span.clone(), },)) = Err(
    ErrorEmitted {
        _priv: (),
    },
)
[sway-core/src/language/ty/expression/expression.rs:587:18] Err(handler.emit_err(sway_error::error::CompileError::ConstGenericNotSupportedHere
{ span: self.span.clone(), },)) = Err(
    ErrorEmitted {
        _priv: (),
    },
)
[sway-core/src/language/ty/expression/expression.rs:587:18] Err(handler.emit_err(sway_error::error::CompileError::ConstGenericNotSupportedHere
{ span: self.span.clone(), },)) = Err(
    ErrorEmitted {
        _priv: (),
    },
)
[sway-core/src/language/ty/expression/expression.rs:587:18] Err(handler.emit_err(sway_error::error::CompileError::ConstGenericNotSupportedHere
{ span: self.span.clone(), },)) = Err(
    ErrorEmitted {
        _priv: (),
    },
)
[sway-core/src/language/ty/expression/expression.rs:587:18] Err(handler.emit_err(sway_error::error::CompileError::ConstGenericNotSupportedHere
{ span: self.span.clone(), },)) = Err(
    ErrorEmitted {
        _priv: (),
    },
)
[sway-core/src/language/ty/expression/expression.rs:587:18] Err(handler.emit_err(sway_error::error::CompileError::ConstGenericNotSupportedHere
{ span: self.span.clone(), },)) = Err(
    ErrorEmitted {
        _priv: (),
    },
)
   Compiling script const_generics (test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics)
    Finished debug [unoptimized + fuel] target(s) [120 B] in ???
